commit 3/3/2023 (backend, frontend) lay du lieu, hien thi danh muc san pham va san pham

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ ul.menu_1 li {
     width: 100px;
     height: 60px;
     text-align: center;
-    margin: 0 10px;
+    margin: 0;
 }
 
 ul.menu_1 li a {
@@ -99,7 +99,7 @@ ul.menu_1 li a {
     justify-content: center;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
+    font-size: 16px;
     color: black;
     text-decoration: none;
     width: 100%;
@@ -166,7 +166,7 @@ ul.menu_2 a:hover {
 .logo {
     margin: 0 auto;
     display: block;
-    margin-left: 50px;
+    margin-left: 80px;
     width: 13%;
 }
 
@@ -293,6 +293,7 @@ ul.menu_footer_3 a:hover {
 /* sidebar */
 
 #main {
+    padding-top: 50px;
     margin: 0 auto;
     border: 1px solid white;
     height: auto;
@@ -303,6 +304,8 @@ ul.menu_footer_3 a:hover {
 /* sidebar */
 
 .sidebar {
+    margin: 0;
+    padding: 0;
     background: white;
     border: 1px solid white;
     height: 390px;
@@ -325,9 +328,9 @@ ul.menu_footer_3 a:hover {
     height: 100%;
     width: 100%;
     line-height: 50px;
-    font-size: 18px;
+    font-weight: 500;
+    font-size: 17px;
     color: #383838;
-    padding-left: 20px;
     box-sizing: border-box;
     border-top: 1px solid rgba(255, 255, 255, .1);
     transition: 0.5s;
@@ -343,23 +346,24 @@ ul.menu_footer_3 a:hover {
 .maincontent {
     border: 1px solid #FFFFFF;
     height: auto;
-    width: 82%;
+    width: 80%;
     margin-top: 5px;
-    margin-left: 5px;
-    float: right;
+    margin-left: 60px;
+    float: left;
 }
 
 ul.product_lits {
     padding: 0;
     margin: 0;
     list-style: none;
+    height: auto;
     width: 100%;
 }
 
 ul.product_lits li {
-    width: 24%;
+    padding-bottom: 50px;
+    width: 33%;
     border: 1px solid #FFFFFF;
-    margin: 5px;
     float: left;
 }
 
@@ -375,8 +379,15 @@ ul.product_lits li a .price_product {
     color: black;
 }
 
+ul.product_lits li a .title_product {
+    text-decoration: none;
+    list-style: none;
+    color: #A52A2A;
+}
+
 ul.product_lits li img {
-    position: relative;
+    width: auto;
+    height: 300px;
     background-color: #F8F8F8;
     margin-bottom: 10px;
     margin-top: 10px;
@@ -389,10 +400,6 @@ ul.product_lits li p {
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
-}
-
-ul.product_lits li img {
-    width: 100%;
 }
 
 .clear {
