--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,7 @@ ul.product_lits li img {
 ul.product_lits li p {
     margin: 0 auto;
     padding-bottom: 5px;
+    padding-right: 15px;
     width: 100%;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
